--- a/neon text/neon.html
+++ b/neon text/neon.html
@@ -1,1 +1,38 @@
-
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Neon Text</title>
+    <link rel="stylesheet" href="style.css">
+</head>
+<body>
+    <p>Glow neon Text</p>
+    <div class="paragraph">
+        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Accusantium 
+        provident blanditiis, dignissimos dolore tempore possimus quo saepe vel 
+        non, dolorum assumenda id earum magni rem? In esse quo perferendis cum?
+        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Accusantium
+        provident blanditiis, dignissimos dolore tempore possimus quo saepe vel
+        non, dolorum assumenda id earum magni rem? In esse quo perferendis cum?
+        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Accusantium
+        provident blanditiis, dignissimos dolore tempore possimus quo saepe vel
+        non, dolorum assumenda id earum magni rem? In esse quo perferendis cum?
+        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Accusantium
+        provident blanditiis, dignissimos dolore tempore possimus quo saepe vel
+        non, dolorum assumenda id earum magni rem? In esse quo perferendis cum?
+        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Accusantium
+        provident blanditiis, dignissimos dolore tempore possimus quo saepe vel
+        non, dolorum assumenda id earum magni rem? In esse quo perferendis cum?
+        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Accusantium
+        provident blanditiis, dignissimos dolore tempore possimus quo saepe vel
+        non, dolorum assumenda id earum magni rem? In esse quo perferendis cum?
+        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Accusantium
+        provident blanditiis, dignissimos dolore tempore possimus quo saepe vel
+        non, dolorum assumenda id earum magni rem? In esse quo perferendis cum?
+        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Accusantium
+        provident blanditiis, dignissimos dolore tempore possimus quo saepe vel
+        non, dolorum assumenda id earum magni rem? In esse quo perferendis cum?
+    </div>
+</body>
+</html>
